# solwatch

./: .gitignore  README.md  compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  compose.yml
backend/.sqlx/: query-99cbf991d5034543766fa3d3493230605c90ff2cde01b91dfbce0983ad8740b8.json
backend/migrations/: 20251104123950_init.sql
backend/src/: app_state.rs  cors.rs  db.rs  error.rs  handlers.rs  main.rs  message.rs  models.rs  routes.rs  solana.rs  tracer.rs
backend/src/db/: accounts.rs  transactions.rs
frontend/: .dockerignore  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: api.js
frontend/src/assets/: App.css
frontend/src/components/: Account.jsx  Card.jsx  EmptyState.jsx  IndexerStats.jsx  IndexingUpdates.jsx  NavBar.jsx  SearchBox.jsx  Transaction.jsx  TransactionHistory.jsx
frontend/src/components/app/: logo.jsx  nav-bar.jsx
frontend/src/utils/: searchData.js
